Removed useless references